deployment/trino/kustomize/base/deployment-manifest/deployment-trino-worker copy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: trino-worker
  labels:
    app: trino-worker
    app.kubernetes.io/part-of: trino
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trino-worker
  template:
    metadata:
      labels:
        app: trino-worker
    spec:
      restartPolicy: Always
      # serviceAccountName: trino-default
      # securityContext:
      #   runAsUser: 1000
      #   runAsGroup: 1000
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /v1/info
              port: http
              scheme: HTTP
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          # securityContext:
          #   allowPrivilegeEscalation: false
            runAsNonRoot: true
          terminationMessagePath: /dev/termination-log
          name: trino-worker
          livenessProbe:
            httpGet:
              path: /v1/info
              port: http
              scheme: HTTP
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config-volume
              mountPath: /etc/trino
            - name: catalog-volume
              mountPath: /etc/trino/catalog
            - name: schemas-volume
              mountPath: /etc/trino/schemas
            - name: trino-data
              mountPath: /data/trino/var
            # - name: truststore-volume
            #   mountPath: /etc/trino/truststore
          terminationMessagePolicy: File
          image: trinodb/trino
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
              - ALL
      volumes:
        - name: config-volume
          configMap:
            name: trino-worker
            defaultMode: 420
        - name: catalog-volume
          configMap:
            name: trino-catalog
            defaultMode: 420
        - name: schemas-volume
          configMap:
            name: schemas-volume-worker
            defaultMode: 420
        - name: trino-data
          emptyDir: {}
        # - name: truststore-volume
        #   secret:
        #     secretName: truststore
        #     items:
        #       - key: truststore.jks
        #         path: truststore.jks
        #     defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
