deployment/trino/kustomize/base/deployment-manifest/route-trino-coordinator.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: trino
  labels:
    app.kubernetes.io/instance: trino
    app.kubernetes.io/name: trino
spec:
  path: /
  to:
    kind: Service
    name: trino
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
